个人中心/收货地址页开发

--- a/src/assets/css/style.less
+++ b/src/assets/css/style.less
@@ -429,7 +429,7 @@ a:active {
     color: #ddd;
 }
 .c-00bbbb {
-    color: #00bbbb !important; 
+    color: #00bbbb !important;
 }
 .c-FF2266{
     color:#FF2266;
@@ -522,7 +522,7 @@ img {
 .border5 {
     position: relative;
 }
- 
+
 .border5:before {
     content: "";/* 注意这里为双引号 */
     position: absolute;
@@ -555,7 +555,7 @@ img {
     -webkit-box-pack: center;
     -webkit-flex-flow: wrap;
     -webkit-flex-direction: row;
-    
+
 }
 .box-l{
     display: box;
@@ -736,4 +736,11 @@ img {
     // background: url("../../assets/images/load.png") no-repeat center center/cover;
     // animation: run 1s linear 0s infinite;
     // -webkit-animation:run 1s linear 0s infinite;
+}
+.loading_new_wrap{
+    position:fixed;
+    top:50%;
+    left:50%;
+    z-index:99;
+    transform:transLateX(-50%) translateY(-50%);
 }
