加载动图修改

--- a/src/assets/css/style.less
+++ b/src/assets/css/style.less
@@ -726,8 +726,10 @@ img {
 .liu{
     width:1.50rem;
     height: 0.89rem;
-    background: url("@{staticimg_origin}/7b1f688ebbd6fb42b458fa2802a01ecb-w250_h150.gif") no-repeat center center;
-    background-size: 100%;
+    // background: url("@{staticimg_origin}/7b1f688ebbd6fb42b458fa2802a01ecb-w250_h150.gif") no-repeat center center;
+    // background-size: 100%;
+    background: url("../images/loading-new.gif") no-repeat center center;
+    background-size: 80%;
     margin: 0 auto;
     z-index: 1024;
     // width:0.30rem;
